package behavioral.state.bttlcf1;

public interface State {
    void pressPowerButton(TVContext context);
}
